changed README to include JRebel